// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components ImageButton propagates href to OptionalLink 1`] = `
<div>
  <div
    class="sc-dlfnOL CAOCf"
  >
    <a
      class="sc-bdfDLd dHgYhG"
      href="/some/path"
    >
      <div
        class="sc-hKgHXU knmyIG"
      >
        <img
          src=""
        />
      </div>
    </a>
  </div>
</div>
`;

exports[`components ImageButton propagates onClick to OptionalLink 1`] = `
<div>
  <div
    class="sc-dlfnOL CAOCf"
  >
    <div
      class="sc-gsTDHW eovoFx"
    >
      <div
        class="sc-hKgHXU knmyIG"
      >
        <img
          src=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components ImageButton renders label and image 1`] = `
<div>
  <div
    class="sc-dlfnOL CAOCf"
  >
    <div
      class="sc-gsTDHW eovoFx"
    >
      <div
        class="sc-hKgHXU knmyIG"
      >
        <img
          src="imgsource.jpg"
        />
        my label
      </div>
    </div>
  </div>
</div>
`;
